fix: fix discovery
feat: Browse in threads

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(mdns)
 add_subdirectory(engine)
 
 target_link_libraries(mdns_listener PRIVATE MDNS::Engine)
+target_compile_features(mdns_listener PRIVATE cxx_std_20)
