--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.20.0)
+
 project(mdns_listener)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_C_STANDARD   11)
+set(CMAKE_CXX_STANDARD          20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(CMAKE_C_STANDARD          11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
 include(cmake/FetchCPM.cmake)
 include(cmake/FetchSPDLOG.cmake)
