feat: Fix bugs add win32 sock backend

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,7 @@ add_subdirectory(engine)
 
 target_link_libraries(mdns_listener PRIVATE MDNS::Engine)
 target_compile_features(mdns_listener PRIVATE cxx_std_20)
+
+if (WIN32)
+    target_link_libraries(mdns_listener PRIVATE ws2_32 iphlpapi)
+endif()
