--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_executable(
     mdns_listener
     main.cpp
-)
+ "stb/include/stb_image.h")
 
 add_subdirectory(logger)
 add_subdirectory(mdns)
+add_subdirectory(stb)
 add_subdirectory(engine)
 
 target_link_libraries(mdns_listener PRIVATE MDNS::Engine)
