--- a/src/stb/CMakeLists.txt
+++ b/src/stb/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(STB INTERFACE)
 
-target_sources(STB
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/stb_image.h
+target_include_directories(STB
+    INTERFACE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
