feat: Window color on win32

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries  (mdns_listener PRIVATE MDNS::Engine)
 target_compile_features(mdns_listener PRIVATE cxx_std_20)
 
 if (WIN32)
-    target_link_libraries(mdns_listener PRIVATE ws2_32 iphlpapi)
+    target_link_libraries(mdns_listener PRIVATE ws2_32 iphlpapi dwmapi)
     add_compile_options(/EHsc)
 endif()
 
